; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_uuid.c_uuid_2_double.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_uuid.c_uuid_2_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@UUID_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.TYPE_3__*)* @uuid_2_double to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @uuid_2_double(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca [2 x i64], align 16
  %4 = alloca double, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store double 0x43F0000000000000, double* %4, align 8
  %5 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @UUID_LEN, align 4
  %10 = call i32 @memcpy(i64* %5, i32 %8, i32 %9)
  %11 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 0
  %12 = load i64, i64* %11, align 16
  %13 = call i64 @pg_bswap64(i64 %12)
  %14 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 0
  store i64 %13, i64* %14, align 16
  %15 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 1
  %16 = load i64, i64* %15, align 8
  %17 = call i64 @pg_bswap64(i64 %16)
  %18 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 1
  store i64 %17, i64* %18, align 8
  %19 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 0
  %20 = load i64, i64* %19, align 16
  %21 = sitofp i64 %20 to double
  %22 = getelementptr inbounds [2 x i64], [2 x i64]* %3, i64 0, i64 1
  %23 = load i64, i64* %22, align 8
  %24 = sitofp i64 %23 to double
  %25 = fdiv double %24, 0x43F0000000000000
  %26 = fadd double %21, %25
  ret double %26
}

declare dso_local i32 @memcpy(i64*, i32, i32) #1

declare dso_local i64 @pg_bswap64(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
